Fixed input bug on firefox
where it extended beyond the limits of its container

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -4,6 +4,7 @@
   border: 2px solid var(--neutral-white-fade);
   border-radius: 0.25rem;
   transition: border-color 200ms ease;
+  width: 100%;
 
   &:focus-within {
     outline: none;
